tests/negative/test_break_no_semicolon.orb
fnc main() {
    while (true) {
        break
    }
}